# XyOS

./: CMakeLists.txt  LG ULTRAWIDE.txt  README.md  XyOS.py  XyOS.sketch  arm_timer.c  arm_timer.h  boot.S  error.c  error.h  exceptions.c  exceptions_asm.S  gdb.conf  gpio.c  gpio.h  id.S  interrupt.c  interrupt.h  interrupt_mips.S  interrupts.c  interrupts.h  interrupts_asm.S  io.c  io.h  launch  launch-bootloader  launch-kernel  launch-serialclient  mailbox.c  mailbox.h  mailbox_asm.S  main.c  main_asm.S  makefile  mmap_io.c  mmap_io.h  screen  stdio.c  stdio.h  system_timer.c  (+10 more)
Bootloader/: Linker.ld  Makefile
Bootloader/Headers/: ConsoleIO.h  GPIO.h  KernelLoader.h  Mailbox.h  Peripherals.h  UART.h  VirtualMemory.h
Bootloader/Source/ConsoleIO/: ConsoleIO.c
Bootloader/Source/Core/: Boot.S  KernelLoader.c  KernelLoaderAssembly.S  Main.c
Bootloader/Source/Exceptions/: Exceptions.c  ExceptionsAssembly.S  VectorTable.S
Bootloader/Source/Peripherals/GPIO/: GPIO.c  UART.c
Bootloader/Source/Peripherals/GPU/: Mailbox.c
Bootloader/Source/VirtualMemory/: VirtualMemory.c  VirtualMemoryAssembly.S
Kernel/: CMakeLists.txt  Linker.ld  Makefile
Kernel/Headers/: ARMTimer.h  ConsoleFont.h  ConsoleIO.h  Exceptions.h  FrameBuffer.h  FrameBufferGraphics.h  GPIO.h  InterruptController.h  Mailbox.h  Menu.h  Peripherals.h  SystemTimer.h  ThreadHandling.h  Threading.h  TrafficLights.h  UART.h  VirtualMemory.h
Kernel/Source/ConsoleIO/: ConsoleIO.c
Kernel/Source/Core/: Boot.S  Main.c  MainAssembly.S  Menu.c
Kernel/Source/Exceptions/: Exceptions.c  ExceptionsAssembly.S  VectorTable.S
Kernel/Source/Memory/: Translation.S
Kernel/Source/Peripherals/ARMTimer/: ARMTimer.c
Kernel/Source/Peripherals/GPIO/: GPIO.c  TrafficLights.c  UART.c
Kernel/Source/Peripherals/GPU/: FrameBuffer.c  FrameBufferGraphics.c  Mailbox.c
Kernel/Source/Peripherals/InterruptController/: InterruptController.c
Kernel/Source/Peripherals/SystemTimer/: SystemTimer.c
Kernel/Source/Scheduler/: ThreadHandling.c  Threading.c
Kernel/Source/VirtualMemory/: Translation.S  VirtualMemory.c
RemoteDownload/: gpio.h  main.c  makefile  uart.c
SerialClient/: Boot.S  ConsoleIO.c  ConsoleIO.h  GPIO.c  GPIO.h  Linker.ld  Makefile  Peripherals.h  SerialClient.c  UART.c  UART.h
SerialServer/: SerialServer.py
